Made: Working link between workoutoverview and singleworkout Work on: Database connection for hashmap

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Workout Manager</string>
+    <string name="title_activity_workout">activity_workout</string>
 </resources>
